samples/nginx-proxy-k8s/failover-http.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: failover-http
  name: failover-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: failover-http
  template:
    metadata:
      labels:
        app: failover-http
    spec:
      containers:
      - name: failover-http
        image: failover
        ports:
        - containerPort: 80
        volumeMounts:
        - name: failover-conf
          mountPath: "/etc/failover/failover.conf"
          subPath: failover.conf
          readOnly: true
      volumes:
      - name: failover-conf
        configMap:
          name: failover-conf
          items:
          - key: failover.conf
            path: failover.conf

---
apiVersion: v1
kind: Service
metadata:
  name: failover-http
spec:
  type: ClusterIP
  selector:
    app: failover-http
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
