samples/nginx-proxy-k8s/nginx-http.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-http
  name: nginx-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-http
  template:
    metadata:
      labels:
        app: nginx-http
    spec:
      containers:
      - name: nginx-http
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: "/etc/nginx/nginx.conf"
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
          - key: nginx.conf
            path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-http
spec:
  type: ClusterIP
  selector:
    app: nginx-http
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-http-lb
spec:
  type: LoadBalancer
  selector:
    app: nginx-http
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
