samples/nginx-proxy-k8s/nginx-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-proxy
  name: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: nginx-proxy
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - name: tls
          mountPath: "/etc/nginx/ssl"
          readOnly: true
        - name: nginx-conf
          mountPath: "/etc/nginx/nginx.conf"
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: tls
        secret:
          secretName: minio-tls
      - name: nginx-conf
        configMap:
          name: nginx-conf-tls
          items:
          - key: nginx.conf
            path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  type: LoadBalancer
  loadBalancerIP: 10.90.12.139
  selector:
    app: nginx-proxy
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
