samples/nginx-proxy-k8s/nginx-svc-clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-clusterip
spec:
  type: ClusterIP
  selector:
    app: nginx-proxy
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
