samples/nginx-proxy-k8s/nginx-httpproxy-health.yml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nginx-proxy-health
spec:
  virtualhost:
    fqdn: nginx-health.pcfdemo.net
    tls:
      secretName: default/minio-tls
  routes:
  - conditions:
    - prefix: /
    healthCheckPolicy:
      path: /
      intervalSeconds: 5
      timeoutSeconds: 2
      unhealthyThresholdCount: 3
      healthyThresholdCount: 5
    services: 
    - name: nginx-http
      port: 80
