samples/nginx-proxy-k8s/nginx-httpproxy.yml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nginx-proxy
spec:
  virtualhost:
    fqdn: nginx.pcfdemo.net
    tls:
      secretName: default/minio-tls
  routes:
  - services: 
    - name: nginx-http
      port: 80
